metadata/objects/Tracking_Object__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Tracking Objects</relationshipLabel>
        <relationshipName>Tracking_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Code__c</fullName>
        <label>Shipment Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Tracking Object</label>
    <nameField>
        <displayFormat>TO-{0000000}</displayFormat>
        <label>Tracking Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>